# aortic-valve-static

./: .gitignore  Aortic-Valve.cbp  CMakeLists.txt
include/: InputProcessor.h  Meassure.h  MinEnergyDeformator.h  NetCollisionShape.h  NetConcaveCollisionAlgorithm.h  NetNetCollisionAlgorithm.h  NetSpliter.h  Net_Wraper.h  Solver.h  StaticCollisionAlgorithm.h  World.h  ani_exp_stress.h  ani_lin_stress.h  anisotrop-stress.h  bound-box.h  camera.h  computation.h  data.h  elastic_forces.h  elem.h  format_in.h  hermit-splines.h  intersection.h  isotrop-stress.h  nets.h  node.h  point.h  postcomputation.h  precomputation.h  save-data.h  separate.h  sew_leaf.h  spring.h  stress-interface.h  stress.h
include/elastic_forces/: MSM.h  NEOGOOK.h  REINFORCING.h  TRQS.h
src/: InputProcessor.cpp  Meassure.cpp  MinEnergyDeformator.cpp  NetCollisionShape.cpp  NetConcaveCollisionAlgorithm.cpp  NetNetCollisionAlgorithm.cpp  Net_Wraper.cpp  Solver.cpp  StaticCollisionAlgorithm.cpp  World.cpp  ani_exp_stress.c  ani_lin_stress.c  anisotrop-stress.c  bound-box.c  camera.c  computation.c  data.c  elem.c  format_in.c  hermit-splines.c  intersection.c  isotrop-stress.c  main.c  main.cpp  nets.c  node.c  point.c  postcomputation.c  precomputation.c  save-data.c  separate.c  sew_leaf.c  spring.c
src/elasic_forces/: MSM.c  NEOGOOK.c  REINFORCING.c  TRQS.c  elastic_forces.c
tests/ElasticModel/: CMakeLists.txt  README.txt  main.cpp
tests/Sewing/: CMakeLists.txt  MinEnergyDeformator.cpp  README.txt  main.cpp  test.cpp
tests/Sewing/include/: MinEnergyDeformator.h
